# SegmentClippingAlgorithms

./: .gitignore  CMakeLists.txt  Dockerfile  SegmentClippingAlgorithms.pro  clippingcanvas.cpp  clippingcanvas.h  mainwindow.cpp  mainwindow.h  polygon_example.txt  style.qss
testfiles/: мног-к_частично_пересекает_окно.txt  отрезок_вертикаль.txt  отрезок_диагональ.txt  полн-ю_видимый_отрезок.txt  частично-видимый_отр-к.txt
многоугольник/: 10-ти угольник.txt  6ти_угольник.txt  большой_мног-к.txt  зиг-заг.txt  мног-к_внутри_окна.txt  мног-к_слева_от_окна.txt  отсечение_по_верхней_границе.txt
отрезок/: отрезок_все_случаи.txt  полн-ю_невилимый_отр-к.txt
